force-app/main/default/objects/sma__MAExportRow__c/sma__MAExportRow__c.object-meta.xml
<CustomObject>
    <label>MapAnything Export Row</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Export Row</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Export Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>