force-app/main/default/objects/sma__MAExportRow__c/fields/sma__Address__c.field-meta.xml
<CustomField>
    <fullName>sma__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>