force-app/main/default/objects/sma__MAExportRow__c/fields/sma__City__c.field-meta.xml
<CustomField>
    <fullName>sma__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>