force-app/main/default/objects/sma__MAExportRow__c/fields/sma__MAExport__c.field-meta.xml
<CustomField>
    <fullName>sma__MAExport__c</fullName>
    <label>MapAnything Export</label>
    <referenceTo>sma__MAExport__c</referenceTo>
    <relationshipLabel>MapAnything Export Rows</relationshipLabel>
    <relationshipName>MapAnything_Export_Rows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>