force-app/main/default/objects/sma__MAExportRow__c/fields/sma__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>sma__ObjectType__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>