force-app/main/default/objects/sma__MAExportRow__c/fields/sma__RecordId__c.field-meta.xml
<CustomField>
    <fullName>sma__RecordId__c</fullName>
    <label>RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>