force-app/main/default/objects/sma__MAExportRow__c/fields/sma__SavedQueryName__c.field-meta.xml
<CustomField>
    <fullName>sma__SavedQueryName__c</fullName>
    <label>Saved Query Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>