force-app/main/default/objects/sma__MAExportRow__c/fields/sma__Tooltip10__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip10__c</fullName>
    <label>Map Tooltip Ten</label>
    <length>255</length>
    <type>Text</type>
</CustomField>