force-app/main/default/objects/sma__MAExportRow__c/fields/sma__Tooltip11__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip11__c</fullName>
    <label>Map Tooltip Eleven</label>
    <length>255</length>
    <type>Text</type>
</CustomField>